crates/signing/tests/ui/eip1271_error_match_requires_wildcard.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/eip1271_error_match_requires_wildcard.rs:4:11
   |
 4 |     match error {
   |           ^^^^^ pattern `_` not covered
   |
note: `ContractsError` defined here
  --> $WORKSPACE/crates/contracts/src/errors.rs
   |
   | pub enum ContractsError {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ContractsError`
   = note: `ContractsError` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
25 ~         ContractsError::SignatureRecovery { .. } => false,
26 ~         _ => todo!(),
   |
